# ShadowSig-Private-M-of-N-Multisig

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  Cargo.toml
apps/api/gateway/: Cargo.toml
apps/api/gateway/src/: config.rs  main.rs  store.rs
apps/api/gateway/src/routes/: approvals.rs  execute.rs  health.rs  metrics.rs  mod.rs  multisigs.rs  proofs.rs  proposals.rs
apps/api/migrations/: 001_initial_schema.sql
apps/api/shared/: Cargo.toml
apps/api/shared/src/: crypto.rs  error.rs  lib.rs  models.rs
apps/web/: .dockerignore  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/analytics/: page.tsx
apps/web/src/app/dashboard/members/: page.tsx
apps/web/src/app/dashboard/multisigs/: page.tsx
apps/web/src/app/dashboard/proofs/: page.tsx
apps/web/src/app/dashboard/proposals/: page.tsx
apps/web/src/app/dashboard/settings/: page.tsx
apps/web/src/app/dashboard/treasury/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/dashboard/: sidebar.tsx
apps/web/src/components/landing/: hero-visualization.tsx
apps/web/src/components/ui/: activity-feed.tsx  approval-modal.tsx  create-multisig-modal.tsx  execution-status-card.tsx  merkle-tree-graph.tsx  metric-card.tsx  nullifier-status-badge.tsx  proof-card.tsx  proof-latency-chart.tsx  proposal-card.tsx  shielded-identity-avatar.tsx  threshold-ring.tsx  treasury-panel.tsx  verification-pulse.tsx  zk-timeline.tsx
apps/web/src/hooks/: useApi.ts
apps/web/src/lib/: api.ts  mock-data.ts  store.ts  types.ts  utils.ts
docs/: architecture.md  protocol.md  security.md  threat-model.md  zk-flow.md
infrastructure/docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml  prometheus.yml
infrastructure/k8s/: api-deployment.yml
programs/lez-framework/: Cargo.toml
programs/lez-framework-macros/: Cargo.toml
programs/lez-framework-macros/src/: lib.rs
programs/lez-framework/src/: lib.rs
programs/shadowsig-verifier/: Cargo.toml  Dockerfile  idl.json
programs/shadowsig-verifier/src/: lib.rs  main.rs
risc0/: Cargo.toml
risc0/guest/: Cargo.toml
risc0/guest/src/: main.rs
risc0/host/: Cargo.toml
risc0/host/src/: lib.rs  main.rs
scripts/: demo.sh  seed.js
services/event-service/: Cargo.toml
services/event-service/src/: lib.rs
services/nullifier-service/: Cargo.toml
services/nullifier-service/src/: lib.rs
services/proof-service/: Cargo.toml
services/proof-service/src/: lib.rs
