[workspace]
resolver = "2"
members = ["guest", "host"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
# risc0-zkvm = "1.2"           # Uncomment when risc0 toolchain is installed
# risc0-build = "1.2"          # Uncomment for guest build support
