[package]
name = "shadowsig-verifier"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "LEZ Verifier Program for ShadowSig private multisig"

[dependencies]
lez-framework = { path = "../lez-framework" } # LP-0002 LEZ integration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
