[package]
name = "shadowsig-proof-service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
# risc0-zkvm = "1.0"  # Uncomment when Risc0 toolchain is installed
