[package]
name = "shadowsig-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "shadowsig"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true

hex.workspace = true

shadowsig-shared = { path = "../shared" }
